Fixed spinner is not showing when sending test notification.

--- a/css/admin.css
+++ b/css/admin.css
@@ -4,7 +4,7 @@
 }
 
 #slack-test-notify {
-	width: 290px;
+	width: 300px;
 	height: 32px;
 }
 
